--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-config-next": "14.0.4",
     "framer-motion": "^12.0.6",
     "glob": "^11.0.1",
-    "next": "14.0.4",
+    "next": "^14.2.23",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
     "postcss": "^8.4.35",
